Продолжаем верстку index.html

--- a/source/index.html
+++ b/source/index.html
@@ -1,108 +1,120 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <title>HTML Academy: Седона</title>
-</head>
-
-<body class="page__body">
-  <header class="page-header">
-  <div class="logo">
-    <a href="">
-      <img src="" width="" height="" alt="Туристический городок Седона">
-    </a>
-  </div>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">
-          <img src="" width="" height="" alt="Открыть меню">
-      </button>
-      <ul class="main-nav__list site-list">
-        <li class="site-list__item">
-          <button class="site-list__button">
+  <head>
+    <meta charset="UTF-8">
+    <title>HTML Academy: Седона</title>
+  </head>
+  <body class="page__body">
+    <header class="page-header">
+      <div class="logo">
+        <a href="">
+        <img src="" width="" height="" alt="Туристический городок Седона">
+        </a>
+      </div>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">
+        <img src="" width="" height="" alt="Открыть меню">
+        </button>
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <button class="site-list__button">
             <img src="" width="" height="" alt="Закрыть меню">
-          </button>
-        </li>
-        <li class="site-list__item">
-          <a href="index.html">Главная</a>
-        </li>
-        <li class="site-list__item">
-          <a href="photo.html">Фото и видео</a>
-        </li>
-        <li class="site-list__item">
-          <a href="form.html">Форма отзыва</a>
-        </li>
-        <li class="site-list__item">
-          <a href="">HTML Academy</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+            </button>
+          </li>
+          <li class="site-list__item">
+            <a href="index.html">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a href="photo.html">Фото и видео</a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html">Форма отзыва</a>
+          </li>
+          <li class="site-list__item">
+            <a href="">HTML Academy</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-  <main class="page-main">
-    <section class="intro">
-      <h1 class="intro__slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
-      <p class="intro__description">Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</p>
-    </section>
+    <main class="page-main">
+      <section class="intro">
+        <h1 class="intro__slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
+        <p class="intro__description">Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</p>
+      </section>
 
-    <section class="advantages">
-      <ul class="advantages__list dignities-list">
-        <li class="dignities-list__item dignity">
-          <h2 class="dignity__title">Настоящий городок</h2>
-          <span class="dignity__number">- №1 -</span>
-          <p class="dignity__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
-          <img src="" width="" height="" alt="">
-        </li>
-        <li class="dignities-list__item dignity">
-          <h2 class="dignity__title">Там есть мост дьявола</h2>
-          <span class="dignity__number">- №2 -</span>
-          <p class="dignity__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-          <img src="" width="" height="" alt="">
-        </li>
-        <li class="dignities-list__item dignity">
-          <h2 class="dignity__title">Небольшая площадь</h2>
-          <span class="dignity__number">- №3 -</span>
-          <p class="dignity__text">Все интересные места находятся очень близко</p>
-        </li>
-        <li class="dignities-list__item dignity">
-          <h2 class="dignity__title">Красивая дорога</h2>
-          <span class="dignity__number">- №4 -</span>
-          <p class="dignity__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-        </li>
-        <li class="dignities-list__item dignity">
-          <h2 class="dignity__title">Мало туристов</h2>
-          <span class="dignity__number">- №5 -</span>
-          <p class="dignity__text">Большинство едет в гранд каньон и толпится там</p>
-        </li>
-      </ul>
-    </section>
+      <section class="advantages">
+        <ul class="advantages__list dignities-list">
+          <li class="dignities-list__item dignity">
+            <h2 class="dignity__title">Настоящий городок</h2>
+            <span class="dignity__number">- №1 -</span>
+            <p class="dignity__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
+            <img src="" width="" height="" alt="">
+            <ul class="dignity__list strong-point">
+              <li class="strong-point__item">
+                <h3 class="strong-point__item__title">Жилье</h3>
+                <p class="strong-point__item_text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+              </li>
+              <li class="strong-point__item">
+                <h3 class="strong-point__item__title">Сувениры</h3>
+                <p class="strong-point__item_text">Не только китайского, но и местного производства!</p>
+              </li>
+              <li class="strong-point__item">
+                <h3 class="strong-point__item__title">Еда</h3>
+                <p class="strong-point__item_text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+              </li>
+            </ul>
+          </li>
+          <li class="dignities-list__item dignity">
+            <h2 class="dignity__title">Там есть мост дьявола</h2>
+            <span class="dignity__number">- №2 -</span>
+            <p class="dignity__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            <img src="" width="" height="" alt="">
+          </li>
+          <li class="dignities-list__item dignity">
+            <h2 class="dignity__title">Небольшая площадь</h2>
+            <span class="dignity__number">- №3 -</span>
+            <p class="dignity__text">Все интересные места находятся очень близко</p>
+          </li>
+          <li class="dignities-list__item dignity">
+            <h2 class="dignity__title">Красивая дорога</h2>
+            <span class="dignity__number">- №4 -</span>
+            <p class="dignity__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="dignities-list__item dignity">
+            <h2 class="dignity__title">Мало туристов</h2>
+            <span class="dignity__number">- №5 -</span>
+            <p class="dignity__text">Большинство едет в гранд каньон и толпится там</p>
+          </li>
+        </ul>
+      </section>
 
-    <div class="interested">
-      <h2 class="interested__title">Заинтересовались?</h2>
-      <p class="interested__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a class="interested__link" href="form.html">Найти гостиницу</a>
-    </div>
+      <div class="interested">
+        <h2 class="interested__title">Заинтересовались?</h2>
+        <p class="interested__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="interested__link" href="form.html">Найти гостиницу</a>
+      </div>
 
-    <div class="map">
-      <img src="" width="" height="" alt="">
-    </div>
-  </main>
+      <div class="map">
+        <img src="" width="" height="" alt="">
+      </div>
+    </main>
 
-  <footer>
-    <a class="hashtag" href="">#VISITSEDONA</a>
-    <div class="communication">
-      <h2 class="visually-hidden">Давайте дружить!</h2>
+    <footer>
+      <a class="hashtag" href="">#VISITSEDONA</a>
+
+      <div class="communication">
+        <h2 class="visually-hidden">Давайте дружить!</h2>
         <ul class="communication__list social-networks">
           <li class="social-networks__item social_network"><a class="social_network_twitter" href="#" aria-label="Твиттер"></a></li>
           <li class="social-networks__item social_network"><a class="social_network_facebook" href="#" aria-label="Фейсбук"></a></li>
           <li class="social-networks__item social_network"><a class="social_network_youtube" href="#" aria-label="Ютуб"></a></li>
-      </ul>
-    </div>
+        </ul>
+      </div>
 
-    <div class="html_academy">
-      <p>Разработано <a href="https://htmlacademy.ru/intensive/adaptive"><img src="" width="" height="" alt="хтмл академия"></a></p>
-    </div>
-  </footer>
-
-</body>
+      <div class="html_academy">
+        <p>Разработано <a href="https://htmlacademy.ru/intensive/adaptive"><img src="" width="" height="" alt="хтмл академия"></a></p>
+      </div>
+    </footer>
+  </body>
 </html>
-
