--- a/source/index.html
+++ b/source/index.html
@@ -39,54 +39,60 @@
 
     <main class="page-main">
       <section class="intro">
+        <img class="intro__img" src="" width="" height="" alt="">
         <h1 class="intro__slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
         <p class="intro__description">Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</p>
       </section>
 
       <section class="advantages">
-        <ul class="advantages__list dignities-list">
-          <li class="dignities-list__item dignity">
+        <div class="advantages__list">
+
+          <div class="advantages__item dignity">
             <h2 class="dignity__title">Настоящий городок</h2>
             <span class="dignity__number">- №1 -</span>
             <p class="dignity__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
-            <img src="" width="" height="" alt="">
-            <ul class="dignity__list strong-point">
-              <li class="strong-point__item">
-                <h3 class="strong-point__item__title">Жилье</h3>
-                <p class="strong-point__item_text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-              </li>
-              <li class="strong-point__item">
-                <h3 class="strong-point__item__title">Сувениры</h3>
-                <p class="strong-point__item_text">Не только китайского, но и местного производства!</p>
-              </li>
-              <li class="strong-point__item">
-                <h3 class="strong-point__item__title">Еда</h3>
-                <p class="strong-point__item_text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-              </li>
-            </ul>
-          </li>
-          <li class="dignities-list__item dignity">
+            <img  class="dignity__img" src="" width="" height="" alt="">
+              <ul class="dignity__list">
+                <li class="dignity__item">
+                  <h3 class="dignity__item__title">Жилье</h3>
+                  <p class="dignity__item_text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                </li>
+                <li class="dignity__item">
+                  <h3 class="dignity__item__title">Сувениры</h3>
+                  <p class="dignity__item_text">Не только китайского, но и местного производства!</p>
+                </li>
+                <li class="dignity__item">
+                  <h3 class="dignity__item__title">Еда</h3>
+                  <p class="dignity__item_text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                </li>
+              </ul>
+          </div>
+
+          <div class="advantages__item dignity">
             <h2 class="dignity__title">Там есть мост дьявола</h2>
             <span class="dignity__number">- №2 -</span>
             <p class="dignity__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-            <img src="" width="" height="" alt="">
-          </li>
-          <li class="dignities-list__item dignity">
+            <img  class="dignity__img" src="" width="" height="" alt="">
+          </div>
+
+          <div class="advantages__item dignity">
             <h2 class="dignity__title">Небольшая площадь</h2>
             <span class="dignity__number">- №3 -</span>
             <p class="dignity__text">Все интересные места находятся очень близко</p>
-          </li>
-          <li class="dignities-list__item dignity">
+          </div>
+
+          <div class="advantages__item dignity">
             <h2 class="dignity__title">Красивая дорога</h2>
             <span class="dignity__number">- №4 -</span>
             <p class="dignity__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="dignities-list__item dignity">
+          </div>
+
+          <div class="advantages__item dignity">
             <h2 class="dignity__title">Мало туристов</h2>
             <span class="dignity__number">- №5 -</span>
             <p class="dignity__text">Большинство едет в гранд каньон и толпится там</p>
-          </li>
-        </ul>
+          </div>
+        </div>
       </section>
 
       <div class="interested">
@@ -96,23 +102,23 @@
       </div>
 
       <div class="map">
-        <img src="" width="" height="" alt="">
+        <img class="map__img" src="" width="" height="" alt="">
       </div>
     </main>
 
-    <footer>
-      <a class="hashtag" href="">#VISITSEDONA</a>
+    <footer class="page-footer">
+      <a class="page-footer__hashtag" href="">#VISITSEDONA</a>
 
-      <div class="communication">
+      <div class="page-footer_social social">
         <h2 class="visually-hidden">Давайте дружить!</h2>
-        <ul class="communication__list social-networks">
-          <li class="social-networks__item social_network"><a class="social_network_twitter" href="#" aria-label="Твиттер"></a></li>
-          <li class="social-networks__item social_network"><a class="social_network_facebook" href="#" aria-label="Фейсбук"></a></li>
-          <li class="social-networks__item social_network"><a class="social_network_youtube" href="#" aria-label="Ютуб"></a></li>
+        <ul class="social__list">
+          <li class="social__item"><a class="social__link social__link--twitter" href="#" aria-label="Твиттер"></a></li>
+          <li class="social__item"><a class="social__link social__link--facebook" href="#" aria-label="Фейсбук"></a></li>
+          <li class="social__item"><a class="social__link social__link--youtube" href="#" aria-label="Ютуб"></a></li>
         </ul>
       </div>
 
-      <div class="html_academy">
+      <div class="page-footer__html-academy">
         <p>Разработано <a href="https://htmlacademy.ru/intensive/adaptive"><img src="" width="" height="" alt="хтмл академия"></a></p>
       </div>
     </footer>
