--- a/source/index.html
+++ b/source/index.html
@@ -1,124 +1,120 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body class="page__body">
-    <header class="page-header">
-      <div class="logo">
-        <a href="">
+
+<head>
+  <meta charset="UTF-8">
+  <title>HTML Academy: Седона</title>
+</head>
+
+<body class="page__body">
+  <header class="page-header">
+
+    <div class="logo">
+      <a href="">
         <img src="" width="" height="" alt="Туристический городок Седона">
-        </a>
-      </div>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">
+      </a>
+    </div>
+
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button">
         <img src="" width="" height="" alt="Открыть меню">
-        </button>
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item">
-            <a href="index.html">Главная</a>
-              <button class="site-list__button">
-                <img src="" width="" height="" alt="Закрыть меню">
-            </button>
-          </li>
-          <li class="site-list__item">
-            <a href="photo.html">Фото и видео</a>
-          </li>
-          <li class="site-list__item">
-            <a href="form.html">Форма отзыва</a>
-          </li>
-          <li class="site-list__item">
-            <a href="">HTML Academy</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+      </button>
 
-    <main class="page-main">
-      <section class="intro">
-        <img class="intro__img" src="" width="" height="" alt="">
-        <h1 class="intro__slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
-        <p class="intro__description">Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</p>
-      </section>
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item"><a href="index.html">Главная</a>
+          <button class="site-list__button"><img src="" width="" height="" alt="Закрыть меню"></button>
+        </li>
+        <li class="site-list__item"><a href="photo.html">Фото и видео</a></li>
+        <li class="site-list__item"><a href="form.html">Форма отзыва</a></li>
+        <li class="site-list__item"><a href="">HTML Academy</a></li>
+      </ul>
+    </nav>
+  </header>
 
-      <section class="advantages">
-        <div class="advantages__list">
+  <main class="page-main">
+    <section class="intro">
+      <img class="intro__img" src="" width="" height="" alt="">
+      <h1 class="intro__slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
+      <p class="intro__description">Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</p>
+    </section>
 
-          <div class="advantages__item dignity">
-            <h2 class="dignity__title">Настоящий городок</h2>
-            <span class="dignity__number">- №1 -</span>
-            <p class="dignity__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
-            <img  class="dignity__img" src="" width="" height="" alt="">
-              <ul class="dignity__list">
-                <li class="dignity__item">
-                  <h3 class="dignity__item__title">Жилье</h3>
-                  <p class="dignity__item_text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-                </li>
-                <li class="dignity__item">
-                  <h3 class="dignity__item__title">Сувениры</h3>
-                  <p class="dignity__item_text">Не только китайского, но и местного производства!</p>
-                </li>
-                <li class="dignity__item">
-                  <h3 class="dignity__item__title">Еда</h3>
-                  <p class="dignity__item_text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-                </li>
-              </ul>
+    <section class="advantages">
+      <div class="advantages__list">
+        <div class="advantages__item dignity">
+          <h2 class="dignity__title">Настоящий городок</h2>
+          <span class="dignity__number">- №1 -</span>
+          <p class="dignity__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
+          <img class="dignity__img" src="" width="" height="" alt="">
+            <ul class="dignity__list">
+              <li class="dignity__item">
+                <h3 class="dignity__item__title">Жилье</h3>
+                <p class="dignity__item_text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+              </li>
+              <li class="dignity__item">
+                <h3 class="dignity__item__title">Сувениры</h3>
+                <p class="dignity__item_text">Не только китайского, но и местного производства!</p>
+              </li>
+              <li class="dignity__item">
+                <h3 class="dignity__item__title">Еда</h3>
+                <p class="dignity__item_text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+              </li>
+            </ul>
           </div>
 
-          <div class="advantages__item dignity">
-            <h2 class="dignity__title">Там есть мост дьявола</h2>
-            <span class="dignity__number">- №2 -</span>
-            <p class="dignity__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-            <img  class="dignity__img" src="" width="" height="" alt="">
-          </div>
-
-          <div class="advantages__item dignity">
-            <h2 class="dignity__title">Небольшая площадь</h2>
-            <span class="dignity__number">- №3 -</span>
-            <p class="dignity__text">Все интересные места находятся очень близко</p>
-          </div>
-
-          <div class="advantages__item dignity">
-            <h2 class="dignity__title">Красивая дорога</h2>
-            <span class="dignity__number">- №4 -</span>
-            <p class="dignity__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </div>
-
-          <div class="advantages__item dignity">
-            <h2 class="dignity__title">Мало туристов</h2>
-            <span class="dignity__number">- №5 -</span>
-            <p class="dignity__text">Большинство едет в гранд каньон и толпится там</p>
-          </div>
+        <div class="advantages__item dignity">
+          <h2 class="dignity__title">Там есть мост дьявола</h2>
+          <span class="dignity__number">- №2 -</span>
+          <p class="dignity__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          <img class="dignity__img" src="" width="" height="" alt="">
         </div>
-      </section>
 
-      <div class="interested">
-        <h2 class="interested__title">Заинтересовались?</h2>
-        <p class="interested__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="interested__link" href="form.html">Найти гостиницу</a>
+        <div class="advantages__item dignity">
+          <h2 class="dignity__title">Небольшая площадь</h2>
+          <span class="dignity__number">- №3 -</span>
+          <p class="dignity__text">Все интересные места находятся очень близко</p>
+        </div>
+
+        <div class="advantages__item dignity">
+          <h2 class="dignity__title">Красивая дорога</h2>
+          <span class="dignity__number">- №4 -</span>
+          <p class="dignity__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </div>
+
+        <div class="advantages__item dignity">
+          <h2 class="dignity__title">Мало туристов</h2>
+          <span class="dignity__number">- №5 -</span>
+          <p class="dignity__text">Большинство едет в гранд каньон и толпится там</p>
+        </div>
       </div>
+    </section>
 
-      <div class="map">
-        <img class="map__img" src="" width="" height="" alt="">
-      </div>
-    </main>
+    <div class="interested">
+      <h2 class="interested__title">Заинтересовались?</h2>
+      <p class="interested__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <a class="interested__link" href="form.html">Найти гостиницу</a>
+    </div>
 
-    <footer class="page-footer">
-      <a class="page-footer__hashtag" href="">#VISITSEDONA</a>
+    <div class="map">
+      <img class="map__img" src="" width="" height="" alt="">
+    </div>
+  </main>
 
-      <div class="page-footer_social social">
-        <h2 class="visually-hidden">Давайте дружить!</h2>
-        <ul class="social__list">
-          <li class="social__item"><a class="social__link social__link--twitter" href="#" aria-label="Твиттер"></a></li>
-          <li class="social__item"><a class="social__link social__link--facebook" href="#" aria-label="Фейсбук"></a></li>
-          <li class="social__item"><a class="social__link social__link--youtube" href="#" aria-label="Ютуб"></a></li>
-        </ul>
-      </div>
+  <footer class="page-footer">
+    <a class="page-footer__hashtag" href="">#VISITSEDONA</a>
 
-      <div class="page-footer__html-academy">
-        <p>Разработано <a href="https://htmlacademy.ru/intensive/adaptive"><img src="" width="" height="" alt="хтмл академия"></a></p>
-      </div>
-    </footer>
-  </body>
+    <div class="page-footer_social social">
+      <h2 class="visually-hidden">Давайте дружить!</h2>
+      <ul class="social__list">
+        <li class="social__item"><a class="social__link social__link--twitter" href="#" aria-label="Твиттер"></a></li>
+        <li class="social__item"><a class="social__link social__link--facebook" href="#" aria-label="Фейсбук"></a></li>
+        <li class="social__item"><a class="social__link social__link--youtube" href="#" aria-label="Ютуб"></a></li>
+      </ul>
+    </div>
+
+    <div class="page-footer__html-academy">
+      <p>Разработано <a href="https://htmlacademy.ru/intensive/adaptive"><img src="" width="" height="" alt="хтмл академия"></a></p>
+    </div>
+  </footer>
+</body>
+
 </html>
