--- a/source/photo.html
+++ b/source/photo.html
@@ -1,109 +1,104 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body class="page__body">
-    <header class="page-header">
-      <div class="logo">
-        <a href="">
+
+<head>
+  <meta charset="UTF-8">
+  <title>HTML Academy: Седона</title>
+</head>
+
+<body class="page__body">
+  <header class="page-header">
+
+    <div class="logo">
+      <a href="">
         <img src="" width="" height="" alt="Туристический городок Седона">
-        </a>
-      </div>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">
+      </a>
+    </div>
+
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button">
         <img src="" width="" height="" alt="Открыть меню">
-        </button>
+      </button>
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item"><a href="index.html">Главная</a>
+          <button class="site-list__button"><img src="" width="" height="" alt="Закрыть меню"></button>
+        </li>
+        <li class="site-list__item"><a href="photo.html">Фото и видео</a></li>
+        <li class="site-list__item"><a href="form.html">Форма отзыва</a></li>
+        <li class="site-list__item"><a href="">HTML Academy</a></li>
+      </ul>
+    </nav>
+  </header>
 
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item">
-            <a href="index.html">Главная</a>
-            <button class="site-list__button">
-            <img src="" width="" height="" alt="Закрыть меню">
-            </button>
-          </li>
-          <li class="site-list__item">
-            <a href="photo.html">Фото и видео</a>
-          </li>
-          <li class="site-list__item">
-            <a href="form.html">Форма отзыва</a>
-          </li>
-          <li class="site-list__item">
-            <a href="">HTML Academy</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+  <main class="page-main">
+    <section class="intro">
+      <img class="intro__img" src="" width="" height="" alt="">
+    </section>
 
-    <main class="page-main">
-      <h1 class="visually_hidden">Фото и видео галерея городка Седона</h1>
-      <section class="intro">
-        <img class="intro__img" src="" width="" height="" alt="">
-      </section>
+    <section class="photo">
+      <h1 class="photo__title">Фото и Видео</h1>
+      <p class="photo__description">
+        Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.
+      </p>
+      <div class="photo__list gallery">
 
-      <section class="photo">
-        <h2 class="photo__title">Фото и Видео</h2>
-        <p class="photo__description">
-          Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.
-        </p>
-        <div class="photo__list gallery">
-          <div class="gallery__item">
-            <img class="gallery_img" src="" width="" height="" alt="">
-            <h3 class="gallery__title">Неродные просторы</h3>
-            <span class="gallery__author">Автор фото: Борис</span>
-            <span class="gallery__like">1350</span>
-          </div>
-
-          <div class="gallery__item">
-            <img class="gallery_img" src="" width="" height="" alt="">
-            <h3 class="gallery__title">Местная растительность</h3>
-            <span class="gallery__author">Автор фото: Сергей</span>
-            <span class="gallery__like">143</span>
-          </div>
-
-          <div class="gallery__item">
-            <img class="gallery_img" src="" width="" height="" alt="">
-            <h3 class="gallery__title">Дорога на север</h3>
-            <span class="gallery__author">Автор фото: Петр</span>
-            <span class="gallery__like">96</span>
-          </div>
-
-          <div class="gallery__item">
-            <img class="gallery_img" src="" width="" height="" alt="">
-            <h3 class="gallery__title">Мост Дьявола</h3>
-            <span class="gallery__author">Автор фото: Антон</span>
-            <span class="gallery__like">254</span>
-          </div>
+        <div class="gallery__item">
+          <img class="gallery_img" src="" width="" height="" alt="">
+          <h2 class="gallery__title">Неродные просторы</h2>
+          <span class="gallery__author">Автор фото: Борис</span>
+          <span class="gallery__like">1350</span>
         </div>
-      </section>
 
-      <section class="video">
-        <h2 class="video__title">Все еще сомневаетесь?</h2>
-        <p class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз! </p>
-        <video class="video__video" width="" height="" controls="controls" poster="">
-          <source src="" type="">
-          <source src="" type="">
-          <source src="" type="">
-        </video>
-      </section>
-    </main>
+        <div class="gallery__item">
+          <img class="gallery_img" src="" width="" height="" alt="">
+          <h2 class="gallery__title">Местная растительность</h2>
+          <span class="gallery__author">Автор фото: Сергей</span>
+          <span class="gallery__like">143</span>
+        </div>
 
-    <footer class="page-footer">
-      <a class="page-footer__hashtag" href="">#VISITSEDONA</a>
+        <div class="gallery__item">
+          <img class="gallery_img" src="" width="" height="" alt="">
+          <h2 class="gallery__title">Дорога на север</h2>
+          <span class="gallery__author">Автор фото: Петр</span>
+          <span class="gallery__like">96</span>
+        </div>
 
-      <div class="page-footer_social social">
-        <h2 class="visually-hidden">Давайте дружить!</h2>
-        <ul class="social__list">
-          <li class="social__item"><a class="social__link social__link--twitter" href="#" aria-label="Твиттер"></a></li>
-          <li class="social__item"><a class="social__link social__link--facebook" href="#" aria-label="Фейсбук"></a></li>
-          <li class="social__item"><a class="social__link social__link--youtube" href="#" aria-label="Ютуб"></a></li>
-        </ul>
+        <div class="gallery__item">
+          <img class="gallery_img" src="" width="" height="" alt="">
+          <h2 class="gallery__title">Мост Дьявола</h2>
+          <span class="gallery__author">Автор фото: Антон</span>
+          <span class="gallery__like">254</span>
+        </div>
       </div>
+    </section>
 
-      <div class="page-footer__html-academy">
-        <p>Разработано <a href="https://htmlacademy.ru/intensive/adaptive"><img src="" width="" height="" alt="хтмл академия"></a></p>
-      </div>
-    </footer>
-  </body>
+    <section class="video">
+      <h2 class="video__title">Все еще сомневаетесь?</h2>
+      <p class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз! </p>
+      <video class="video__video" width="" height="" controls="controls" poster="">
+        <source src="" type="">
+        <source src="" type="">
+        <source src="" type="">
+      </video>
+    </section>
+  </main>
+
+  <footer class="page-footer">
+    <a class="page-footer__hashtag" href="">#VISITSEDONA</a>
+
+    <div class="page-footer_social social">
+      <h2 class="visually-hidden">Давайте дружить!</h2>
+      <ul class="social__list">
+        <li class="social__item"><a class="social__link social__link--twitter" href="#" aria-label="Твиттер"></a></li>
+        <li class="social__item"><a class="social__link social__link--facebook" href="#" aria-label="Фейсбук"></a></li>
+        <li class="social__item"><a class="social__link social__link--youtube" href="#" aria-label="Ютуб"></a></li>
+      </ul>
+    </div>
+
+    <div class="page-footer__html-academy">
+      <p>Разработано <a href="https://htmlacademy.ru/intensive/adaptive"><img src="" width="" height="" alt="хтмл академия"></a></p>
+    </div>
+  </footer>
+</body>
+
 </html>
