--- a/source/form.html
+++ b/source/form.html
@@ -32,8 +32,8 @@
 
   <main class="page-main">
     <section class="reviews">
-      <h1 class="feedback__title">Оставьте свой отзыв</h1>
-      <p class="feedback__text">
+      <h1 class="reviews__title">Оставьте свой отзыв</h1>
+      <p class="reviews__text">
         Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях
       </p>
 
