--- a/source/index.html
+++ b/source/index.html
@@ -7,9 +7,9 @@
 </head>
 
 <body class="page__body">
-  <header class="page-header">
+  <header class="header">
 
-    <div class="logo">
+    <div class="header__logo logo">
       <a href="">
         <img src="" width="" height="" alt="Туристический городок Седона">
       </a>
@@ -22,7 +22,7 @@
 
       <ul class="main-nav__list site-list">
         <li class="site-list__item"><a href="index.html">Главная</a>
-          <button class="site-list__button"><img src="" width="" height="" alt="Закрыть меню"></button>
+          <button class="site-list__button"></button>
         </li>
         <li class="site-list__item"><a href="photo.html">Фото и видео</a></li>
         <li class="site-list__item"><a href="form.html">Форма отзыва</a></li>
@@ -31,15 +31,22 @@
     </nav>
   </header>
 
-  <main class="page-main">
+  <main class="main">
     <section class="intro">
-      <img class="intro__img" src="" width="" height="" alt="">
-      <h1 class="intro__slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
-      <p class="intro__description">Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</p>
+
+      <div class="intro__background">
+        <img class="intro__background-img" src="" width="" height="" alt="">
+      </div>
+
+      <div class="intro__description intro-description">
+        <h1 class="intro-description__slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
+        <p class="intro-description__text">Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</p>
+      </div>
     </section>
 
     <section class="advantages">
       <div class="advantages__list">
+
         <div class="advantages__item dignity">
           <h2 class="dignity__title">Настоящий городок</h2>
           <span class="dignity__number">- №1 -</span>
@@ -47,16 +54,16 @@
           <img class="dignity__img" src="" width="" height="" alt="">
             <ul class="dignity__list">
               <li class="dignity__item">
-                <h3 class="dignity__item__title">Жилье</h3>
-                <p class="dignity__item_text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                <h3 class="dignity__item-title">Жилье</h3>
+                <p class="dignity__item-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
               </li>
               <li class="dignity__item">
-                <h3 class="dignity__item__title">Сувениры</h3>
-                <p class="dignity__item_text">Не только китайского, но и местного производства!</p>
+                <h3 class="dignity__item-title">Сувениры</h3>
+                <p class="dignity__item-text">Не только китайского, но и местного производства!</p>
               </li>
               <li class="dignity__item">
-                <h3 class="dignity__item__title">Еда</h3>
-                <p class="dignity__item_text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                <h3 class="dignity__item-title">Еда</h3>
+                <p class="dignity__item-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
               </li>
             </ul>
           </div>
