--- a/source/photo.html
+++ b/source/photo.html
@@ -7,9 +7,9 @@
 </head>
 
 <body class="page__body">
-  <header class="page-header">
+  <header class="header">
 
-    <div class="logo">
+    <div class="header__logo logo">
       <a href="">
         <img src="" width="" height="" alt="Туристический городок Седона">
       </a>
@@ -21,7 +21,7 @@
       </button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item"><a href="index.html">Главная</a>
-          <button class="site-list__button"><img src="" width="" height="" alt="Закрыть меню"></button>
+          <button class="site-list__button"></button>
         </li>
         <li class="site-list__item"><a href="photo.html">Фото и видео</a></li>
         <li class="site-list__item"><a href="form.html">Форма отзыва</a></li>
@@ -30,16 +30,20 @@
     </nav>
   </header>
 
-  <main class="page-main">
+  <main class="main">
     <section class="intro">
-      <img class="intro__img" src="" width="" height="" alt="">
+      <div class="intro__background">
+        <img class="intro__background-img" src="" width="" height="" alt="">
+      </div>
     </section>
 
     <section class="photo">
-      <h1 class="photo__title">Фото и Видео</h1>
-      <p class="photo__description">
-        Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.
-      </p>
+      <div class="photo__intro photo-intro">
+        <h1 class="photo-intro__title">Фото и Видео</h1>
+        <p class="photo-intro__description">
+          Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.
+        </p>
+      </div>
       <div class="photo__list gallery">
 
         <div class="gallery__item">
