Начинаем стилизацию index.html

--- a/source/form.html
+++ b/source/form.html
@@ -8,7 +8,7 @@
 </head>
 
 <body class="page__body">
-  <header class="header">
+  <header class="header container">
 
     <div class="header__logo logo">
       <a href="">
@@ -31,7 +31,7 @@
     </nav>
   </header>
 
-  <main class="main">
+  <main class="main container">
     <section class="intro">
       <div class="intro__background">
         <img class="intro__background-img" src="" width="" height="" alt="">
@@ -155,7 +155,7 @@
       </section>
   </main>
 
-  <footer class="page-footer">
+  <footer class="page-footer container">
     <a class="page-footer__hashtag" href="">#VISITSEDONA</a>
 
     <div class="page-footer_social social">
