--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body class="page__body">
-  <header class="header">
+  <header class="header container">
 
     <div class="header__logo logo">
       <a href="">
@@ -32,7 +32,7 @@
     </nav>
   </header>
 
-  <main class="main">
+  <main class="main container">
     <section class="intro">
 
       <div class="intro__background">
@@ -49,10 +49,12 @@
       <div class="advantages__list">
 
         <div class="advantages__item dignity">
-          <h2 class="dignity__title">Настоящий городок</h2>
-          <span class="dignity__number">- №1 -</span>
-          <p class="dignity__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
-          <img class="dignity__img" src="" width="" height="" alt="">
+          <div class="dignity__group">
+            <h2 class="dignity__title">Настоящий городок</h2>
+            <span class="dignity__number">- №1 -</span>
+            <p class="dignity__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
+          </div>
+          <img class="dignity__img" src="img/main-city-mobile@1x.jpg" width="320" height="260" alt="">
             <ul class="dignity__list">
               <li class="dignity__item">
                 <h3 class="dignity__item-title">Жилье</h3>
@@ -70,28 +72,36 @@
           </div>
 
         <div class="advantages__item dignity">
-          <h2 class="dignity__title">Там есть мост дьявола</h2>
-          <span class="dignity__number">- №2 -</span>
-          <p class="dignity__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-          <img class="dignity__img" src="" width="" height="" alt="">
+          <div class="dignity__group">
+            <h2 class="dignity__title">Там есть мост дьявола</h2>
+            <span class="dignity__number">- №2 -</span>
+            <p class="dignity__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          </div>
+          <img class="dignity__img" src="img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="">
         </div>
 
         <div class="advantages__item dignity">
-          <h2 class="dignity__title">Небольшая площадь</h2>
-          <span class="dignity__number">- №3 -</span>
-          <p class="dignity__text">Все интересные места находятся очень близко</p>
+          <div class="dignity__group dignity__group--folded">
+            <h2 class="dignity__title">Небольшая площадь</h2>
+            <span class="dignity__number">- №3 -</span>
+            <p class="dignity__text">Все интересные места находятся очень близко</p>
+          </div>
         </div>
 
         <div class="advantages__item dignity">
-          <h2 class="dignity__title">Красивая дорога</h2>
-          <span class="dignity__number">- №4 -</span>
-          <p class="dignity__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          <div class="dignity__group dignity__group--folded">
+            <h2 class="dignity__title">Красивая дорога</h2>
+            <span class="dignity__number">- №4 -</span>
+            <p class="dignity__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </div>
         </div>
 
         <div class="advantages__item dignity">
-          <h2 class="dignity__title">Мало туристов</h2>
-          <span class="dignity__number">- №5 -</span>
-          <p class="dignity__text">Большинство едет в гранд каньон и толпится там</p>
+          <div class="dignity__group dignity__group--folded">
+            <h2 class="dignity__title">Мало туристов</h2>
+            <span class="dignity__number">- №5 -</span>
+            <p class="dignity__text">Большинство едет в гранд каньон и толпится там</p>
+          </div>
         </div>
       </div>
     </section>
@@ -107,7 +117,7 @@
     </div>
   </main>
 
-  <footer class="page-footer">
+  <footer class="page-footer container">
     <a class="page-footer__hashtag" href="">#VISITSEDONA</a>
 
     <div class="page-footer_social social">
