Закончил index.html, начинаю photo.html

--- a/source/photo.html
+++ b/source/photo.html
@@ -17,16 +17,18 @@
     </div>
 
     <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">
+      <a class="main-nav__toggle" href="#">
         <img src="" width="" height="" alt="Открыть меню">
-      </button>
+      </a>
+
       <ul class="main-nav__list site-list">
-        <li class="site-list__item"><a href="index.html">Главная</a>
-          <button class="site-list__button"></button>
+        <li class="site-list__item">
+          <a class="site-list__link" href="index.html">Главная</a>
+          <a class="site-list__button" href="#"><img src="" width="" height="" alt="Закрыть меню"></a>
         </li>
-        <li class="site-list__item"><a href="photo.html">Фото и видео</a></li>
-        <li class="site-list__item"><a href="form.html">Форма отзыва</a></li>
-        <li class="site-list__item"><a href="">HTML Academy</a></li>
+        <li class="site-list__item"><a class="site-list__link" href="photo.html">Фото и видео</a></li>
+        <li class="site-list__item"><a class="site-list__link" href="form.html">Форма отзыва</a></li>
+        <li class="site-list__item"><a class="site-list__link" href="">HTML Academy</a></li>
       </ul>
     </nav>
   </header>
@@ -88,10 +90,10 @@
     </section>
   </main>
 
-  <footer class="page-footer container">
-    <a class="page-footer__hashtag" href="">#VISITSEDONA</a>
+  <footer class="footer container">
+    <a class="footer__hashtag" href="">#VISITSEDONA</a>
 
-    <div class="page-footer_social social">
+    <div class="footer_social social">
       <h2 class="visually-hidden">Давайте дружить!</h2>
       <ul class="social__list">
         <li class="social__item"><a class="social__link social__link--twitter" href="#" aria-label="Твиттер"></a></li>
@@ -100,7 +102,7 @@
       </ul>
     </div>
 
-    <div class="page-footer__html-academy">
+    <div class="footer__html-academy">
       <p>Разработано <a href="https://htmlacademy.ru/intensive/adaptive"><img src="" width="" height="" alt="хтмл академия"></a></p>
     </div>
   </footer>
