--- a/source/index.html
+++ b/source/index.html
@@ -17,17 +17,18 @@
     </div>
 
     <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">
+      <a class="main-nav__toggle" href="#">
         <img src="" width="" height="" alt="Открыть меню">
-      </button>
+      </a>
 
       <ul class="main-nav__list site-list">
-        <li class="site-list__item"><a href="index.html">Главная</a>
-          <button class="site-list__button"></button>
+        <li class="site-list__item">
+          <a class="site-list__link" href="index.html">Главная</a>
+          <a class="site-list__button" href="#"><img src="" width="" height="" alt="Закрыть меню"></a>
         </li>
-        <li class="site-list__item"><a href="photo.html">Фото и видео</a></li>
-        <li class="site-list__item"><a href="form.html">Форма отзыва</a></li>
-        <li class="site-list__item"><a href="">HTML Academy</a></li>
+        <li class="site-list__item"><a class="site-list__link" href="photo.html">Фото и видео</a></li>
+        <li class="site-list__item"><a class="site-list__link" href="form.html">Форма отзыва</a></li>
+        <li class="site-list__item"><a class="site-list__link" href="">HTML Academy</a></li>
       </ul>
     </nav>
   </header>
@@ -40,8 +41,8 @@
       </div>
 
       <div class="intro__description intro-description">
-        <h1 class="intro-description__slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
-        <p class="intro-description__text">Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</p>
+        <h1 class="intro-description__slogan">Седона - небольшой<br> городок в Аризоне, заслуживающий большего!</h1>
+        <p class="intro-description__text">Рассмотрим 5 причин, по которым<br> седона круче, чем гранд каньон!</p>
       </div>
     </section>
 
@@ -56,17 +57,17 @@
           </div>
           <img class="dignity__img" src="img/main-city-mobile@1x.jpg" width="320" height="260" alt="">
             <ul class="dignity__list">
-              <li class="dignity__item">
+              <li class="dignity__item dignity__item--housing">
                 <h3 class="dignity__item-title">Жилье</h3>
                 <p class="dignity__item-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
               </li>
-              <li class="dignity__item">
+              <li class="dignity__item dignity__item--souvenirs">
                 <h3 class="dignity__item-title">Сувениры</h3>
                 <p class="dignity__item-text">Не только китайского, но и местного производства!</p>
               </li>
-              <li class="dignity__item">
+              <li class="dignity__item dignity__item--hamburger">
                 <h3 class="dignity__item-title">Еда</h3>
-                <p class="dignity__item-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                <p class="dignity__item-text">Всегда заказывайте<br> фирменный бургер, вы не разочаруетесь!</p>
               </li>
             </ul>
           </div>
@@ -84,7 +85,7 @@
           <div class="dignity__group dignity__group--folded">
             <h2 class="dignity__title">Небольшая площадь</h2>
             <span class="dignity__number">- №3 -</span>
-            <p class="dignity__text">Все интересные места находятся очень близко</p>
+            <p class="dignity__text">Все интересные места находятся<br> очень близко</p>
           </div>
         </div>
 
@@ -92,7 +93,7 @@
           <div class="dignity__group dignity__group--folded">
             <h2 class="dignity__title">Красивая дорога</h2>
             <span class="dignity__number">- №4 -</span>
-            <p class="dignity__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <p class="dignity__text">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
           </div>
         </div>
 
@@ -100,7 +101,7 @@
           <div class="dignity__group dignity__group--folded">
             <h2 class="dignity__title">Мало туристов</h2>
             <span class="dignity__number">- №5 -</span>
-            <p class="dignity__text">Большинство едет в гранд каньон и толпится там</p>
+            <p class="dignity__text">Большинство едет в гранд каньон<br> и толпится там</p>
           </div>
         </div>
       </div>
@@ -108,19 +109,19 @@
 
     <div class="interested">
       <h2 class="interested__title">Заинтересовались?</h2>
-      <p class="interested__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <p class="interested__text">Укажите предполагаемые даты<br> поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       <a class="interested__link" href="form.html">Найти гостиницу</a>
     </div>
 
     <div class="map">
-      <img class="map__img" src="" width="" height="" alt="">
+      <img class="map__img" src="img/bg-map-mobile@1x.jpg" width="320" height="350" alt="">
     </div>
   </main>
 
-  <footer class="page-footer container">
-    <a class="page-footer__hashtag" href="">#VISITSEDONA</a>
+  <footer class="footer container">
+    <a class="footer__hashtag" href="">#VISITSEDONA</a>
 
-    <div class="page-footer_social social">
+    <div class="footer_social social">
       <h2 class="visually-hidden">Давайте дружить!</h2>
       <ul class="social__list">
         <li class="social__item"><a class="social__link social__link--twitter" href="#" aria-label="Твиттер"></a></li>
@@ -129,8 +130,8 @@
       </ul>
     </div>
 
-    <div class="page-footer__html-academy">
-      <p>Разработано <a href="https://htmlacademy.ru/intensive/adaptive"><img src="" width="" height="" alt="хтмл академия"></a></p>
+    <div class="footer__html-academy">
+      <p>Разработано <a class="footer__logo" href="https://htmlacademy.ru/intensive/adaptive"><img src="img/logo-htmlacademy.svg" width="26.9" height="34.1" alt="хтмл академия"></a></p>
     </div>
   </footer>
 </body>
