Закончил photo.html, начинаю form.html

--- a/source/form.html
+++ b/source/form.html
@@ -170,7 +170,7 @@
     </div>
 
     <div class="footer__html-academy">
-      <p>Разработано <a href="https://htmlacademy.ru/intensive/adaptive"><img src="" width="" height="" alt="хтмл академия"></a></p>
+      <p>Разработано <a href="https://htmlacademy.ru/intensive/adaptive"><img src="img/logo-htmlacademy.svg" width="26.9" height="34.1" alt="хтмл академия"></a></p>
     </div>
   </footer>
 </body>
