--- a/source/photo.html
+++ b/source/photo.html
@@ -44,36 +44,36 @@
       <div class="photo__intro photo-intro">
         <h1 class="photo-intro__title">Фото и Видео</h1>
         <p class="photo-intro__description">
-          Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.
+          Не можете решиться на путешествие<br> из-за курса? Фотографии помогут вам забыть о политике и экономике.
         </p>
       </div>
       <div class="photo__list gallery">
 
         <div class="gallery__item">
-          <img class="gallery_img" src="" width="" height="" alt="">
+          <img class="gallery__img" src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="">
           <h2 class="gallery__title">Неродные просторы</h2>
-          <span class="gallery__author">Автор фото: Борис</span>
+          <span class="gallery__author">Автор фото: Борис</span><br>
           <span class="gallery__like">1350</span>
         </div>
 
         <div class="gallery__item">
-          <img class="gallery_img" src="" width="" height="" alt="">
+          <img class="gallery__img" src="img/photo-cactus-mobile@1x.jpg" width="280" height="" alt="280">
           <h2 class="gallery__title">Местная растительность</h2>
-          <span class="gallery__author">Автор фото: Сергей</span>
+          <span class="gallery__author">Автор фото: Сергей</span><br>
           <span class="gallery__like">143</span>
         </div>
 
         <div class="gallery__item">
-          <img class="gallery_img" src="" width="" height="" alt="">
+          <img class="gallery__img" src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="">
           <h2 class="gallery__title">Дорога на север</h2>
-          <span class="gallery__author">Автор фото: Петр</span>
+          <span class="gallery__author">Автор фото: Петр</span><br>
           <span class="gallery__like">96</span>
         </div>
 
         <div class="gallery__item">
-          <img class="gallery_img" src="" width="" height="" alt="">
+          <img class="gallery__img" src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="">
           <h2 class="gallery__title">Мост Дьявола</h2>
-          <span class="gallery__author">Автор фото: Антон</span>
+          <span class="gallery__author">Автор фото: Антон</span><br>
           <span class="gallery__like">254</span>
         </div>
       </div>
@@ -81,8 +81,8 @@
 
     <section class="video">
       <h2 class="video__title">Все еще сомневаетесь?</h2>
-      <p class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз! </p>
-      <video class="video__video" width="" height="" controls="controls" poster="">
+      <p class="video__description">Смотрите видеопрезентацию и<br> скорее за билетами, пока они не подорожали в очередной раз! </p>
+      <video class="video__video" width="320" height="201" controls="controls" poster="img/video-mobile@1x.jpg">
         <source src="" type="">
         <source src="" type="">
         <source src="" type="">
@@ -103,7 +103,7 @@
     </div>
 
     <div class="footer__html-academy">
-      <p>Разработано <a href="https://htmlacademy.ru/intensive/adaptive"><img src="" width="" height="" alt="хтмл академия"></a></p>
+      <p>Разработано <a href="https://htmlacademy.ru/intensive/adaptive"><img src="img/logo-htmlacademy.svg" width="26.9" height="34.1" alt="хтмл академия"></a></p>
     </div>
   </footer>
 </body>
