Заканчиваю с CSS, готовлюсь делать сетки

--- a/source/index.html
+++ b/source/index.html
@@ -42,8 +42,8 @@
       </div>
 
       <div class="intro__description intro-description">
-        <h1 class="intro-description__slogan">Седона - небольшой<br> городок в Аризоне, заслуживающий большего!</h1>
-        <p class="intro-description__text">Рассмотрим 5 причин, по которым<br> седона круче, чем гранд каньон!</p>
+        <h1 class="intro-description__slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
+        <p class="intro-description__text">Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</p>
       </div>
     </section>
 
@@ -68,7 +68,7 @@
               </li>
               <li class="dignity__item dignity__item--hamburger">
                 <h3 class="dignity__item-title">Еда</h3>
-                <p class="dignity__item-text">Всегда заказывайте<br> фирменный бургер, вы не разочаруетесь!</p>
+                <p class="dignity__item-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
               </li>
             </ul>
           </div>
@@ -86,7 +86,7 @@
           <div class="dignity__group dignity__group--folded">
             <h2 class="dignity__title">Небольшая площадь</h2>
             <span class="dignity__number">- №3 -</span>
-            <p class="dignity__text">Все интересные места находятся<br> очень близко</p>
+            <p class="dignity__text">Все интересные места находятся очень близко</p>
           </div>
         </div>
 
@@ -94,7 +94,7 @@
           <div class="dignity__group dignity__group--folded">
             <h2 class="dignity__title">Красивая дорога</h2>
             <span class="dignity__number">- №4 -</span>
-            <p class="dignity__text">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
+            <p class="dignity__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </div>
         </div>
 
@@ -102,7 +102,7 @@
           <div class="dignity__group dignity__group--folded">
             <h2 class="dignity__title">Мало туристов</h2>
             <span class="dignity__number">- №5 -</span>
-            <p class="dignity__text">Большинство едет в гранд каньон<br> и толпится там</p>
+            <p class="dignity__text">Большинство едет в гранд каньон и толпится там</p>
           </div>
         </div>
       </div>
@@ -110,7 +110,7 @@
 
     <div class="interested">
       <h2 class="interested__title">Заинтересовались?</h2>
-      <p class="interested__text">Укажите предполагаемые даты<br> поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <p class="interested__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       <a class="interested__link" href="form.html">Найти гостиницу</a>
     </div>
 
