--- a/source/form.html
+++ b/source/form.html
@@ -150,7 +150,7 @@
           <div class="feedback__success">
             <h2 class="feedback__success-title">Ваш отзыв отправлен!</h2>
             <p class="feedback__success-description">
-              Спасибо за ваше участие, ваш<br> отзыв уже поступил к нам.<br> В ближайшее время мы<br> опубликуем его на сайте.
+              Спасибо за ваше участие, ваш отзыв уже поступил к нам.<br> В ближайшее время мы опубликуем его на сайте.
             </p>
             <div class="feedback__success-linkbg">
               <a class="feedback__success-link" href="">Закрыть окно</a>
