--- a/source/photo.html
+++ b/source/photo.html
@@ -53,36 +53,38 @@
         <div class="gallery__item">
           <img class="gallery__img" src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="">
           <h2 class="gallery__title">Неродные просторы</h2>
-          <span class="gallery__author">Автор фото: Борис</span><br>
+          <span class="gallery__author">Автор фото: Борис</span>
           <span class="gallery__like">1350</span>
         </div>
 
         <div class="gallery__item">
           <img class="gallery__img" src="img/photo-cactus-mobile@1x.jpg" width="280" height="" alt="280">
           <h2 class="gallery__title">Местная растительность</h2>
-          <span class="gallery__author">Автор фото: Сергей</span><br>
+          <span class="gallery__author">Автор фото: Сергей</span>
           <span class="gallery__like">143</span>
         </div>
 
         <div class="gallery__item">
           <img class="gallery__img" src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="">
           <h2 class="gallery__title">Дорога на север</h2>
-          <span class="gallery__author">Автор фото: Петр</span><br>
+          <span class="gallery__author">Автор фото: Петр</span>
           <span class="gallery__like">96</span>
         </div>
 
         <div class="gallery__item">
           <img class="gallery__img" src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="">
           <h2 class="gallery__title">Мост Дьявола</h2>
-          <span class="gallery__author">Автор фото: Антон</span><br>
+          <span class="gallery__author">Автор фото: Антон</span>
           <span class="gallery__like">254</span>
         </div>
       </div>
     </section>
 
     <section class="video">
-      <h2 class="video__title">Все еще сомневаетесь?</h2>
-      <p class="video__description">Смотрите видеопрезентацию и<br> скорее за билетами, пока они не подорожали в очередной раз! </p>
+      <div class="video__description">
+        <h2 class="video__title">Все еще сомневаетесь?</h2>
+        <p class="video__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз! </p>
+      </div>
       <video class="video__video" width="320" height="201" controls="controls" poster="img/video-mobile@1x.jpg">
         <source src="" type="">
         <source src="" type="">
